# ChangeLog for app-text/jadetex
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-text/jadetex/ChangeLog,v 1.7 2003/01/22 18:39:21 agriffis Exp $

  22 Jan 2003; Aron Griffis <agriffis@gentoo.org> jadetex-3.12.ebuild :
  Add alpha to KEYWORDS

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*jadetex-3.12 (19 Apr 2002)

  2 Aug 2002; phoen][x <phoenix@gentoo.org> jadetex-3.12.ebuild :
  Added LICENSE, SLOT.

  15 Jul 2002; Owen Stampflee <owen@gentoo.org> :

  Added KEYWORDS.

  19 Apr 2002; Seemant Kulleen <seemant@gentoo.org> jadetex-3.12.ebuild
  files/digest-jadetex-3.12 :

  Version bump for bugfixes to newest stable.  Also, SRC_URI and HOMEPAGE
  information updated.  Thanks to Geert Bevin in bug #1931 for the update.
