@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/jadetex/jadetex-3.12.ebuild,v 1.10 2003/01/22 18:39:21 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/jadetex/jadetex-3.12.ebuild,v 1.11 2003/02/03 17:38:58 satai Exp $
 
 S=${WORKDIR}/${P}
 DESCRIPTION="TeX macros used by Jade TeX output."
@@ -16,12 +16,16 @@ KEYWORDS="x86 ppc sparc alpha"
 
 src_compile() {
 
+	addwrite /usr/share/texmf/ls-R
+	addwrite /usr/share/texmf/fonts
     emake || die
 
 }
 
 src_install () {
 
+	addwrite /usr/share/texmf/ls-R
+	addwrite /usr/share/texmf/fonts
     make \
 		DESTDIR=${D} \
 		install || die
